k8s/ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
spec:
  type: ClusterIP
  selector:
    app: spring-petclinic
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host :  "petclinic"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: spring-petclinic
                port:
                  number: 80
